syntax = "proto3";
package pb;

service EventStore {
    // Gets all Events by given EventFilter
    rpc GetEvents(EventFilter) returns (EventResponse) {}
    // Creates a new Event into the EventStore
    rpc CreateEvent(Event) returns (Response) {}
}

message Event {
    int32 event_id = 1;
    string event_type = 2;
    int32 aggregate_id = 3;
    string aggregate_type = 4;
    string aggregate_data = 5;
    string channel = 6;
}

message Response {
    bool success = 1;
    string message = 2;
}

message EventFilter {
    int32 event_id = 1;
    int32 aggregate_id = 2;
}

message EventResponse {
    repeated Event events = 1;
}
